src/test/deca/context/invalid/instanceof-selection.deca
{
    Object a;
    (a instanceof Object).coco;
}